--- a/bebeclick/Views/Account/UserDetails.cshtml
+++ b/bebeclick/Views/Account/UserDetails.cshtml
@@ -1,5 +1,20 @@
 ﻿@using Bebeclick.Models
+@using Microsoft.AspNet.Identity
+@using Resources
 
 @model UserDetailsViewMode
 
-<img src="@string.Format("{0}?height=28&width=28", Model.Picture)" alt="@Model.Name" />
+@if (Request.IsAuthenticated)
+{
+    <img class="__settings" src="@Url.Content("~/Content/images/config_icon.png")" alt="@Model.Name" />
+    <span class="__rbt58b">&nbsp;&nbsp;|&nbsp;&nbsp;</span>
+    <img class="__avatar" src="@string.Format("{0}?height=28&width=28", Model.Picture != null ? Model.Picture.ToString() : Url.Content("~/Content/images/usuario_icon.jpg"))" alt="@Model.Name" />
+    <span class="__rbt58b">&nbsp;&nbsp;</span>
+    <a class="__rbt58b">@Model.FirstName</a>
+}
+else
+{
+    @Html.ActionLink(Resources.General.LoginLink, "Login", "Account", routeValues: null, htmlAttributes: new { @class = "__rbt58b" })
+    <span class="__rbt58b">&nbsp;&nbsp;|&nbsp;&nbsp;</span>
+    @Html.ActionLink(Resources.General.RegisterLink, "Register", "Account", routeValues: null, htmlAttributes: new { @class = "__rbt58b" })
+}
