--- a/bebeclick/Views/Shared/_Layout.cshtml
+++ b/bebeclick/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
         <div id="__membership">
             <div id="__social"><img src="~/Content/Images/tw_icon.png" /><img src="~/Content/Images/fb_icon.png" /><img src="~/Content/Images/pt_icon.png" /></div>
             <div id="__account">
-                @{Html.RenderAction("UserDetails", "Account");}
+                @{Html.RenderAction("LoginPartial", "Account");}
             </div>
         </div>
         <div id="__menu_bar">
