Edit profile completed

--- a/bebeclick/Content/account/editProfile.css
+++ b/bebeclick/Content/account/editProfile.css
@@ -36,10 +36,10 @@
 #__gender{
     width: 300px;
 }
-#__state{
+#__states{
     width: 300px;
 }
-#__city{
+#__cities{
     width: 300px;
 }
 .ui-datepicker {
