--- a/bebeclick/Views/Home/Index.cshtml
+++ b/bebeclick/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
 
 @using (Html.BeginForm())
 {
-    <div id="__main" style="background-image: url('@Url.Content(Model.Background)'">
+    <div id="__main" style="background-image: url('@Url.Content(Model.Background)')">
         <div id="__testimonial"><h4 class="bebeclick">Idea interior</h4><p>"Remodelamos toda la habitación del bebé. Una increíble atención y unos super precios".<br />Fernanda Rojas</p></div>
         <div id="__search_recommend">
             <div id="__search_title">@Resources.General.SearchTitle</div>
