--- a/bebeclick/Views/Shared/_Layout.cshtml
+++ b/bebeclick/Views/Shared/_Layout.cshtml
@@ -20,9 +20,9 @@
                 $("#__account .__settings").contextMenu({
                     menuSelector: "#contextMenu",
                     menuSelected: function (invokedOn, selectedMenu) {
-                        var msg = "You selected the menu item '" + selectedMenu.text() +
-                            "' on the value '" + invokedOn.text() + "'";
-                        alert(msg);
+                        //var msg = "You selected the menu item '" + selectedMenu.text() +
+                        //    "' on the value '" + invokedOn.text() + "'";
+                        //alert(msg);
                     }
                 });
             }
